# AppSec-Agent

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  gradio_app.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  environment.py  requirements.txt
tasks/: easy.json  hard.json  medium.json
